--- a/miss_hit.cfg
+++ b/miss_hit.cfg
@@ -5,6 +5,7 @@ line_length: 120
 
 suppress_rule: "naming_functions"
 suppress_rule: "naming_scripts"
+suppress_rule: "naming_parameters"
 # regex_function_name: "[a-z]+([a-zA-Z0-9]){1}[a-zA-Z0-9]+"
 # regex_script_name: "[a-z0-9]+(_[a-z0-9]+)*"
 
