move dependencies and update miss_hit config

--- a/miss_hit.cfg
+++ b/miss_hit.cfg
@@ -12,4 +12,4 @@ suppress_rule: "naming_parameters"
 suppress_rule: "copyright_notice"
 # copyright_entity: "Jim"
 
-# exclude_dir: "lib"
+exclude_dir: "lib"
