--- a/miss_hit.cfg
+++ b/miss_hit.cfg
@@ -1,15 +1,15 @@
 # style guide (https://florianschanda.github.io/miss_hit/style_checker.html)
-tab_width: 4
+tab_width: 2
 
-line_length: 100
+line_length: 90
 
 suppress_rule: "naming_functions"
 suppress_rule: "naming_scripts"
 suppress_rule: "naming_parameters"
+
 # regex_function_name: "[a-z]+([a-zA-Z0-9]){1}[a-zA-Z0-9]+"
 # regex_script_name: "[a-z0-9]+(_[a-z0-9]+)*"
 
-suppress_rule: "copyright_notice"
-# copyright_entity: "Jim"
+copyright_entity: "Jim"
 
 exclude_dir: "lib"
